--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta name="twitter:site" content="" />
     <meta name="twitter:image" content="" />
   </head>
-
+<link rel="icon" type="favicon.ico/png" href="/images/favicon.ico.png">
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
