--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <meta name="twitter:site" content="" />
     <meta name="twitter:image" content="" />
   </head>
-<link rel="icon" type="favicon.ico/png" href="/images/favicon.ico.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
+<link rel="shortcut icon" href="/favicon.ico">
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
