--- a/index.html
+++ b/index.html
@@ -3,16 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
-    <title>Big Tex Pressure pros</title>
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <title>Big Tex Pressure Pros | San Antonio & Austin Exterior Cleaning</title>
+    <meta name="description" content="Professional pressure washing, permanent Christmas lights, and exterior cleaning services in San Antonio, Austin, and surrounding areas. Get a free estimate today!" />
+    <meta name="author" content="Big Tex Pressure Pros" />
 
-    <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="" />
-    <meta property="og:description" content="" />
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&family=Open+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
+
+    <meta property="og:title" content="Big Tex Pressure Pros | Professional Exterior Cleaning" />
+    <meta property="og:description" content="Transform your property with our professional pressure washing, gutter cleaning, and permanent lighting services." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="" />
+    <meta property="og:image" content="/assets/hero-pressure-washing.jpg" />
 
     <meta name="twitter:card" content="" />
     <meta name="twitter:site" content="" />
