Update social metadata and add preview image

--- a/index.html
+++ b/index.html
@@ -1,30 +1,39 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Big Tex Pressure Pros | San Antonio & Austin Exterior Cleaning</title>
-    <meta name="description" content="Professional pressure washing, permanent Christmas lights, and exterior cleaning services in San Antonio, Austin, and surrounding areas. Get a free estimate today!" />
-    <meta name="author" content="Big Tex Pressure Pros" />
 
-    <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&family=Open+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Big Tex Pressure Pros</title>
+  <meta name="description"
+    content="Professional pressure washing, permanent Christmas lights, and exterior cleaning services in San Antonio, Austin, and surrounding areas. Get a free estimate today!" />
+  <meta name="author" content="Big Tex Pressure Pros" />
 
-    <meta property="og:title" content="Big Tex Pressure Pros | Professional Exterior Cleaning" />
-    <meta property="og:description" content="Transform your property with our professional pressure washing, gutter cleaning, and permanent lighting services." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="/assets/hero-pressure-washing.jpg" />
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&family=Open+Sans:wght@300;400;500;600;700&display=swap"
+    rel="stylesheet" />
 
-    <meta name="twitter:card" content="" />
-    <meta name="twitter:site" content="" />
-    <meta name="twitter:image" content="" />
-  </head>
+  <meta property="og:title" content="Big Tex Pressure Pros" />
+  <meta property="og:description"
+    content="Transform your property with our professional pressure washing, gutter cleaning, and permanent lighting services." />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="/social-preview.jpg" />
+
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Big Tex Pressure Pros" />
+  <meta name="twitter:description"
+    content="Transform your property with our professional pressure washing, gutter cleaning, and permanent lighting services." />
+  <meta name="twitter:image" content="/social-preview.jpg" />
+</head>
 <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
 <link rel="shortcut icon" href="/favicon.ico">
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
