--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
   <meta property="og:description"
     content="Transform your property with our professional pressure washing, gutter cleaning, and permanent lighting services." />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="/social-preview.jpg" />
+  <meta property="og:image" content="/social-preview.png" />
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Big Tex Pressure Pros" />
   <meta name="twitter:description"
     content="Transform your property with our professional pressure washing, gutter cleaning, and permanent lighting services." />
-  <meta name="twitter:image" content="/social-preview.jpg" />
+  <meta name="twitter:image" content="/social-preview.png" />
 </head>
 <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
 <link rel="shortcut icon" href="/favicon.ico">
